2008-12-09  Brett Wilson  <brettw@chromium.org>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=22177

        Add a callback on ChromeClient that the state of form elements on
        the page has changed. This is to allow clients implementing session
        saving to know when the current state is dirty.

        * WebKitSupport/ChromeClientWx.h:
        (WebCore::ChromeClientWx::formStateDidChange):

2008-12-02  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Add HitTest to wxWebView (and wxWebFrame).
        
        https://bugs.webkit.org/show_bug.cgi?id=22459

        * WebFrame.cpp:
        (wxWebFrame::HitTest):
        * WebFrame.h:
        * WebView.cpp:
        (wxWebView::HitTest):
        * WebView.h:

2008-11-24  Darin Fisher  <darin@chromium.org>

        Fix bustage.

        http://bugs.webkit.org/show_bug.cgi?id=15643

        * WebKitSupport/EditorClientWx.cpp:
        (WebCore::EditorClientWx::isSelectTrailingWhitespaceEnabled):
        * WebKitSupport/EditorClientWx.h:

2008-11-24  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        - https://bugs.webkit.org/show_bug.cgi?id=22470
          remove unneeded URL argument from FrameLoaderClient::updateGlobalHistory

        * WebKitSupport/FrameLoaderClientWx.cpp:
        (WebCore::FrameLoaderClientWx::updateGlobalHistory): Remove argument.
        * WebKitSupport/FrameLoaderClientWx.h: Ditto.

2008-11-21  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Maintain an EditCommand stack in WebFramePrivate, and expose Undo and
        Redo in wxWebView.
        
        https://bugs.webkit.org/show_bug.cgi?id=22403

        * WebFrame.cpp:
        (wxWebFrame::wxWebFrame):
        (wxWebFrame::Undo):
        (wxWebFrame::Redo):
        (wxWebFrame::CanUndo):
        (wxWebFrame::CanRedo):
        * WebFrame.h:
        * WebFramePrivate.h: Added.