@@ -134,6 +134,10 @@ class WXDLLIMPEXP_WEBKIT wxWebFrame
     
     wxString RunScript(const wxString& javascript);
     
+    bool FindString(const wxString& string, bool forward = true,
+        bool caseSensitive = false, bool wrapSelection = true,
+        bool startInSelection = true);
+    
     bool CanIncreaseTextSize() const;
     void IncreaseTextSize();
     bool CanDecreaseTextSize() const;
