@@ -1,3 +1,15 @@
+2008-12-13  Kevin Watters  <kevinwatters@gmail.com>
+
+        Reviewed by Kevin Ollivier.
+
+        Expose findString in wxWebView as FindString.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22458
+
+        * WebView.cpp:
+        (wxWebView::FindString):
+        * WebView.h:
+
 2008-12-09  Brett Wilson  <brettw@chromium.org>
 
         Reviewed by Dave Hyatt.
